--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@ Luca Légy Vidám!<br>
 <font style="padding-left:10px; color:#C44044; text-transform:uppercase;font-size:12px">Have you seen my teddy bear tibbers?</font>
 </div>
 <div class="szoveg">
-  <h1>Aranyosi Ervin: Légy vidám</h1>
-<center><strong>Ez a nap is legyen vidám, <br>
-mosolyra húzd a szádat!<br>
-Mosolyod úgy fog hatni rám,<br>
-- elmenekül a bánat.<br>
-Mosolyod én tovább adom,<br>
+  <h1>Aranyosi Ervin: Legy vidam</h1>
+<center><strong>Ez a nap is legyen vidam, <br>
+mosolyra huzd a szadat!<br>
+Mosolyod ugy fog hatni ram,<br>
+- elmenekül a banat.<br>
+Mosolyod én tovabb adom,<br>
 - tolem megkapják mások.<br>
 A jó kedvre, van jó alkalom,<br>
   s mindig akadhat rá ok.</strong></center>
