--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <div class="header">
 </div>
 <div class="oldalnev">
-Luca Légy Vidám!<br>
+Luca Legy Vidam!<br>
 <font style="padding-left:10px; color:#C44044; text-transform:uppercase;font-size:12px">Have you seen my teddy bear tibbers?</font>
 </div>
 <div class="szoveg">
@@ -27,11 +27,11 @@ Luca Légy Vidám!<br>
 <center><strong>Ez a nap is legyen vidam, <br>
 mosolyra huzd a szadat!<br>
 Mosolyod ugy fog hatni ram,<br>
-- elmenekül a banat.<br>
-Mosolyod én tovabb adom,<br>
-- tolem megkapják mások.<br>
-A jó kedvre, van jó alkalom,<br>
-  s mindig akadhat rá ok.</strong></center>
+- elmenekul a banat.<br>
+Mosolyod en tovabb adom,<br>
+- tolem megkapjak masok.<br>
+A jo kedvre, van jo alkalom,<br>
+  s mindig akadhat ra ok.</strong></center>
 </div>
 <div class="footer">
 <iframe width="800" height="415" src="https://www.youtube.com/embed/PBJgCDBx2bU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
