--- a/index.html
+++ b/index.html
@@ -2,7 +2,14 @@
 <head>
 <title>My teddy bear</title>
 <link rel="StyleSheet" type="text/css" href="style.css">
-<meta name="viewport" content="width=device-width initial-scale=1">
+<link href="responsive.css" 
+  type="text/css" 
+  rel="stylesheet" 
+  media="only screen and (max-device-width: 950px)" />
+  <meta name="viewport" 
+  content="width=device-width, 
+  initial-scale=1, 
+  maximum-scale=1">
 </head>
 <body>
 <div class="linkek">
