--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>My teddy bear</title>
+<title>Luca</title>
 <link rel="StyleSheet" type="text/css" href="style.css">
 <link href="responsive.css" 
   type="text/css" 
